# SecureProBot-2.0

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  SecureProBotApp.py  SecureProBot_Complete.ipynb  build.sh  pyproject.toml  render.yaml  requirements.txt
datasets/: botometer-feedback-2019.csv  botwiki-2019.csv  botwiki-verified.csv  cresci-2017.csv  cresci-rtbust-2019.csv  gilani-2017.csv  political-bots.csv  varol-icwsm.csv  verified-2019.csv
models/: model_config.json  scaler_stats.json
