[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secureprobot"
version = "2.1.0"
description = "AI-Powered Twitter/X Bot Detection Platform"
requires-python = ">=3.9,<3.12"
dependencies = [
    "Flask==2.3.3",
    "numpy==1.24.3",
    "scikit-learn==1.3.2",
    "tensorflow==2.14.0",
    "joblib==1.3.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
    "setuptools>=69.0.0",
    "wheel",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]
